2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: clean the desktop file.

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix the list of source files.

2005-06-23  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (gnome_about_me_password):
	  Fix another crasher

2005-06-22  Diego Gonzalez <diego@pemas.net>

	* Makefile.am: remove cracklib
	* gnome-about-me-password.c (passdlg_check_password_timeout_cb): 
	  remove dependencies on cracklib
	* cracklib/*: remove it

2005-06-21  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.c: Improve some error messages
	  about_me_error: new function
	* (about_me_load_info): Avoid crashing when switching to the Address tab
	* (about_me_commit): generate a good file_as field, code taken from evolution

2005-06-15  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.glade: Change the look of the "change Password"
	  dialog.
	* gnome-about-me-password.c: Change completely the inner workings
	  and add a way to meausure the quality of the password.
	* cracklib/*: code from cracklib2 to check the quality of the
	  password.

	Several other changes...

2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-about-me.glade: Remove garbage text. Patch by Benjamin
	LeMasurier. Fixes bug #162492.

2005-04-01  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.c: fix the case where the self uid is wrong
	  and the edition when the self contact is created for the
	  first time.
	  
2005-03-29  Diego Gonzalez <diego@pemas.net>

	* Makefile.am: fix tabs

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: build e-util-marshal.c.

2004-12-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.glade: fixed a typo (Closes: #162094).