@@ -11,5 +11,5 @@ Categories=GNOME;Application;Settings;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
-X-GNOME-Bugzilla-Component=Keyboard
+X-GNOME-Bugzilla-Component=about-me
 X-GNOME-Bugzilla-Version=@VERSION@
