@@ -1,5 +1,10 @@
 2005-07-05  Sebastien Bacher  <seb128@debian.org>
 
+	* Makefile.am: fix the list of desktop files for the tarball.
+	* gnome-about-me.desktop.in.in: fix the component.
+
+2005-07-05  Sebastien Bacher  <seb128@debian.org>
+
 	* Makefile.am: clean the desktop file.
 
 2005-07-05  Sebastien Bacher  <seb128@debian.org>
